# Alpha-Centauri

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  ROADMAP.md  assets.pack  rust-toolchain.toml  zig-cc
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: rust_migration.md
.github/workflows/: rust-native-ubuntu.yml  verify-workspace.yml
_archived/: README.md
_archived/bevy_prototype_src/: factions.rs  lib.rs  main.rs  tech.rs  worldgen.rs
_archived/bundles/: README.md
_archived/project_spec/: data_files.txt  dependencies.txt  game_flow.txt  modules.txt  mvp.txt  ui_and_requirements.txt
_archived/root_artifacts/: Cargo.toml.backup  README.md  bk_bk_test_Projects_SMAC.txt  install_and_run.sh  project.profile  setup_universal_codex.sh  smac_core.Cargo.toml.backup
_archived/sample_saves/: README.md  slot_2.json
_archived/source_snapshots/: README.md
_archived/workspace_backups/: README.md  smac_core_lib_before_playable_api_20260428_193225.rs  smac_core_lib_before_v0_2_20260428_193604.rs  smac_gui_main_before_v0_2_20260428_193604.rs
data/: README.md  facilities.json  factions.json  localization.json  production.json  runtime_rules.json  start_scenario.json  technology_tree.json  ui_theme.json  units.json
data/_archived/: README.md  unit_runtime.json
docs/: status-report.md
documentation/api_documentation/: README.md
documentation/player_guides/: README.md
extraction-tools/rust/: Cargo.toml
extraction-tools/rust/src/extraction/: main.rs
godot-project/: Cargo.toml
godot-project/src/: main.rs
godot-project/src/extraction/: main.rs
godot-project/src/game/: mod.rs
rust-native/: Cargo.toml  README.md
scripts/: bootstrap_local_toolchain.sh  clean_local_artifacts.sh  gpt-git-backup.sh  verify_workspace.sh
smac_bevy/: Cargo.toml
smac_bevy/src/: audio.rs  camera.rs  main.rs  map_view.rs  ui.rs
smac_core/: Cargo.toml
smac_gui/: Cargo.toml
toolchain/: README.md  manifest.json
(+82 files in other folders)
